--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.7",
     "react-transition-group": "^4.4.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
