--- a/package.json
+++ b/package.json
@@ -5,22 +5,18 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.22.11",
-    "@getbrevo/brevo": "^1.0.1",
     "@react-spring/web": "^9.7.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
     "gsap": "^3.12.2",
-    "json-loader": "^0.5.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
-    "react-transition-group": "^4.4.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
