--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,21 @@ dist
 dist-ssr
 *.local
 
+# testing
+/coverage
+
+# production
+/build
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 *.suo
 *.ntvs*
 *.njsproj
